Modified bower.json Modified package structure Increased package version to 1.0.1

--- a/example/test.html
+++ b/example/test.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <head>
-    <meta HTTP-EQUIV="X-UA-COMPATIBLE" CONTENT="IE=EmulateIE9" >
-    <script type="text/javascript" src="scripts/d3.min.js"></script>
-    <script type="text/javascript" src="scripts/radialProgress.js"></script>
 
-    <link type="text/css" rel="stylesheet" href="styles/style.css">
+    <meta HTTP-EQUIV="X-UA-COMPATIBLE" CONTENT="IE=EmulateIE9" >
+
+    <script type="text/javascript" src="../lib/d3.min.js"></script>
+    <script type="text/javascript" src="../dist/radialProgress.js"></script>
+
+    <link type="text/css" rel="stylesheet" href="../dist/radialProgress.css">
 
     <style>
 
@@ -73,8 +75,6 @@
     </div>
 </div>
 
-
-
 <script language="JavaScript">
 
     var div1=d3.select(document.getElementById('div1'));
@@ -135,10 +135,6 @@
                 .render();
 
     }
-
-
-
-
 
 </script>
 
